--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -16,6 +16,7 @@
 	--linkcolor: #ff0000;
 	--mentioncolor: #ff0000;
 	--ch-icon-color: #ff0000;
+	--ch-name-color: #ff0000;
 	
 	/* Other Colors */
 	--textbrightest: 255,255,255;
