--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -5,8 +5,10 @@
 @import url("https://monstrousdev.github.io/themes/addons/user-tags.css");
 @import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
 @import url("https://codedotspectra.github.io/themes/core/settings-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');			/* 'Open Sans' */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');	/* 'Roboto', sans-serif */
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');		/* 'Lato', sans-serif */
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');	/* 'Inter', sans-serif */
 /* Config */
 :root {
 	/* Colors */
@@ -30,8 +32,11 @@
 	--dangercolor: 237,66,69;
 	
 	/* Fonts */
-	--customFont: 'Open Sans';
-	--font-display: var(--customFont);
+	--font-memberslist: 'Open Sans';
+	--font-chat: 'Open Sans';
+	--font-channellist: 'Open Sans';
+	--font-other: 'Open Sans';
+	--font-display: var(--font-other);
 	
 	/* Home Icon */
 	--homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord-logo.png');
