--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -62,6 +62,9 @@
 	--transparencycolor: 0,0,0;
 	--transparencyalpha: 0.15;
 	
+	/* Updates */
+	--updatenotice_v1_0_5: none;
+	
 	/* Plugin Support */
 	--popout:	var(--backgroundImage);
 	--popoutposition: var(--backgroundPosition);
@@ -4395,35 +4398,16 @@ html .typingindicator-folder {
 	-webkit-mask: url(https://discord.com/assets/cfbc2d8ceacfacf07850f986c8165195.svg) center/contain no-repeat;
 }
 
-/* Channeldms */
+/* Channel DMS */
 
 .ChannelDms-channelmembers-wrap .ChannelDms-channelmembers-header {
 	background-color: rgba(var(--transparencycolor), var(--memberlisttransparency));
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Update Notice */
 html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg::before {
 	content: "Update your Ashuramaru Theme:	https://kurou-kun.github.io/share/ashuramaru/ashuramaru.theme.css" !important;
-	display: var(--updatenotice, block) !important;
+	display: var(--updatenotice_v1_0_5, block) !important;
 	background-color: rgba(var(--backgroundColor), .8) !important;
 	box-shadow: 0 1px 5px 0 rgba(var(--transparencycolor), .3) !important;
 	color: var(--header-primary) !important;
