--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -2569,6 +2569,7 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
   .mainContent-20q_Hp
   .channelName-3KPsGw {
   color: var(--ch-name-color);
+  font-weight: 900;
 }
 .unread-36eUEm {
   background-color: var(--ch-icon-color);
@@ -3813,7 +3814,7 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
   border: none;
 }
 
-/* ~~~~		16.		BDSUPPORT						~~~~ */
+/* BDsupport */
 
 html .bd-toast {
 	background-color: rgb(var(--accentcolor));
@@ -3983,8 +3984,7 @@ html .monaco-editor .reference-zone-widget .ref-tree .referenceMatch .highlight 
 	background: rgb(var(--accentcolor));
 }
 
-
-/* ~~~~		17.		POWERCORDSUPPORT				~~~~ */
+/* Owercordsupport */
 
 html .powercord-toast {
 	background-color: transparent;
