--- a/share/ashuramaru/discord/edit.css
+++ b/share/ashuramaru/discord/edit.css
@@ -5,14 +5,14 @@
 /* Variables */
 
 :root {
-  --theme-name: "Reborn";
-  --blackout: black;
-  --dark: #333;
-  --lighter: #666;
-  --bright: #ccc;
-  --background-blur: 0px;
-  --popup-blur: 0px;
-  --background-darkness: 0.75
+	--theme-name: "Ashuramaru";
+	--blackout: black;
+	--dark: #333;
+	--lighter: #666;
+	--bright: #ccc;
+	--background-blur: 0px;
+	--popup-blur: 0px;
+	--background-darkness: 0.75
 }
 
   /* Dark Mode */
