--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -7,22 +7,28 @@
 
 /* Variables */
 :root {
-  --theme-version: "1.5";
-  --main-color: #16356d;
-  --hover-color: #1c4faf;
-  --online: #43b581;
-  --idle: #faa61a;
-  --dnd: #f04747;
-  --offline: #636b75;
-  --invisible: #747f8d;
-  --streaming: #643da7;
-  --home-color: #eee;
-  --home-size: 24px;
-  --roundness: 0px;
-  --spoiler-blur: 5px;
-  --shadow: rgba(0,0,0,.4);
-  --alert-display: block;
-  --accent: var(--main-color);
+	--theme-version: "1.0.6";
+	
+	/* Colors */
+	--main-color: #ff0000;
+	--hover-color: #ff0000;
+	--online: #43b581;
+	--idle: #faa61a;
+	--dnd: #f04747;
+	--offline: #636b75;
+	--invisible: #747f8d;
+	--streaming: #643da7;
+	--accent: var(--main-color);
+	--home-color: #eee;
+	
+	/* Home Icon */
+	--home-size: 24px;
+	
+	/* Misc */
+	--roundness: 0px;
+	--spoiler-blur: 1px;
+	--shadow: rgba(0,0,0,.4);
+	--alert-display: block;
 }
 
 #app-mount {
