--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -39,7 +39,7 @@
 	--font-display: var(--font-other);
 	
 	/* Home Icon */
-	--homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord-logo.png');
+	--homeImage: url(https://monstrousdev.github.io/themes/assets/svgs/home.svg);
 	--homeImageSize: cover;
 	
 	/* Background */
@@ -145,13 +145,12 @@ body {
     box-shadow: none !important
 }
 
-.tutorialContainer-1pL9QS .childWrapper-1j_1ub {
-    background-color: transparent;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: var(--homeImage);
-    background-size: var(--homeImageSize);
-    background-clip: border-box
+.tutorialContainer-1pL9QS>.listItem-3SmSlK .wrapper-28eC3z svg {
+  background-color: var(--home-color);
+  -webkit-mask: url(--homeImage);
+  -webkit-mask-size: var(--home-size);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
 
 .tutorialContainer-1pL9QS .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub,
