--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -31,6 +31,13 @@
 	--successcolor: 59,165,92;
 	--warningcolor: 250,166,26;
 	--dangercolor: 237,66,69;
+	--home-color: #ffffff;
+	--online: #43b581;
+	--idle: #faa61a;
+	--dnd: #f04747;
+	--offline: #636b75;
+	--invisible: #747f8d;
+	--streaming: #643da7;
 	
 	/* Fonts */
 	--font-chat: 'Roboto', sans-serif;
