--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -43,6 +43,7 @@
 	--font-chat: 'Roboto', sans-serif;
 	--font-channellist: 'Inter', sans-serif;
 	--font-other: 'Open Sans';
+	font-family: 'Open Sans';
 	--font-display: var(--font-other);
 	
 	/* Home Icon */
