--- a/share/ashuramaru/discord/edit.css
+++ b/share/ashuramaru/discord/edit.css
@@ -1,6 +1,60 @@
 /* Imports */
 @import "https://kurou-kun.github.io/share/ashuramaru/discord/source.css";
 
+:root{
+	
+}
+
+.theme-light, .theme-dark, .theme-amoled {
+	--text-positive: rgb(var(--successcolor));
+	--text-warning: rgb(var(--warningcolor));
+	--text-danger: rgb(var(--dangercolor));
+	--info-positive-background: rgba(var(--successcolor),.1);
+	--info-positive-foreground: rgb(var(--successcolor));
+	--info-positive-text: #fff;
+	--info-warning-background: rgba(var(--warningcolor),.1);
+	--info-warning-foreground: rgb(var(--warningcolor));
+	--info-warning-text: #fff;
+	--info-danger-background: rgba(var(--dangercolor),.1);
+	--info-danger-foreground: rgb(var(--dangercolor));
+	--info-danger-text: #fff;
+	--status-positive: rgb(var(--successcolor));
+	--status-positive-background: rgb(var(--successcolor));
+	--status-positive-text: #fff;
+	--status-warning: rgb(var(--warningcolor));
+	--status-warning-background: rgb(var(--warningcolor));
+	--status-warning-text: #fff;
+	--status-danger: rgb(var(--dangercolor));
+	--status-danger-background: rgb(var(--dangercolor));
+	--status-danger-text: #fff;
+	--header-primary: rgb(var(--textbrightest));
+	--header-secondary: rgb(var(--textbright));
+	--text-normal: rgb(var(--textbrighter));
+	--text-muted: rgb(var(--textdarker));
+	--channels-default: rgb(var(--textdark));
+	--interactive-normal: rgb(var(--textbright));
+	--interactive-hover: rgb(var(--textbrighter));
+	--interactive-active: rgb(var(--textbrightest));
+	--interactive-muted: rgb(var(--textdarkest));
+	--logo-primary: rgb(var(--textbrightest));
+	--modal-background: rgba(var(--transparencycolor), .2);
+	--background-accent: rgba(var(--transparencycolor), .1);
+	--background-primary: rgba(var(--transparencycolor), .2);
+	--background-secondary: rgba(var(--transparencycolor), .3);
+	--background-secondary-alt: rgba(var(--transparencycolor), .35);
+	--background-tertiary: rgba(var(--transparencycolor), .4);
+	--background-floating: rgba(var(--transparencycolor), .5);
+	--background-mobile-primary: rgba(var(--transparencycolor), .2);
+	--background-mobile-secondary: rgba(var(--transparencycolor), .3);
+	--background-modifier-accent: rgba(var(--textbrightest),.1);
+	--background-message-automod: rgba(var(--dangercolor),.05);
+	--background-message-automod-hover: rgba(var(--dangercolor),.1);
+	--channeltextarea-background: rgba(var(--transparencycolor), .3);
+	--input-background: rgba(var(--transparencycolor), .1);
+	--elevation-low: 0 1px 5px 0 rgba(var(--transparencycolor), .3);
+	--elevation-high: 0 2px 10px 0 rgba(var(--transparencycolor), .3);
+}
+
 /* 1. Title Bar */
   /* 1.a. Main Title Bar */
 .titleBar-1it3bQ {
@@ -1933,12 +1987,6 @@ border-color: 2px dashed rgba(255, 255, 255, .1);
 #app-mount .wrapper-28eC3z .wrapper-3kah-n {
   overflow: hidden;
 }
-
-/* Defining */
-#app-mount .chat-2ZfjoI,		/*	chat	container			*/
-#app-mount .container-3wLKDe,	/* 	chat	upport			*/
-#app-mount .container-3XgAHv,	/* 	chat	thread sidebar 	*/
-#app-mount .wrapper-3HVHpV,	/* 	chat	messages loading 	*/
 
 /* Channel Font */
 .channelName-3KPsGw {
