--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -11,7 +11,7 @@
     --themeColor2: #5B86E5;
     --customFont: 'Roboto', sans-serif;
     --font-display: var(--customFont);
-    --homeImage: url('https://limeshark.dev/img/n/icon.png');
+    --homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord/home-icon.svg');
     --homeImageSize: cover;
     --backgroundColor: #0d0d0d;
     --backgroundImage: url('https://kurou-kun.github.io/share/discord/ashuramaru/Ashuramaru-Background.png');
