--- a/share/ashuramaru/discord/edit.css
+++ b/share/ashuramaru/discord/edit.css
@@ -1,5 +1,211 @@
-/* Imports */
-@import url("https://kurou-kun.github.io/share/ashuramaru/discord/source.css");
+
+
+/* URL Color */
+.markup-eYLPri a {
+  color: var(--color-link);
+}
+.markup-eYLPri code {
+  background-color: var(--color-main);
+  border-radius: 5px;
+  border: none;
+}
+
+/* Channels Font */
+.channelName-3KPsGw {
+	font-family: var(--font-channels);
+	font-size: 16px;
+}
+
+/* Channels Icon Colors */
+.icon-2W8DHg {	
+	color: var(--color-channel-icon);
+}
+.modeMuted-2T4MDZ .icon-2W8DHg {
+	color: var(--color-channel-icon);
+}
+.modeMuted-2T4MDZ:hover .icon-2W8DHg,
+.wrapper-NhbLHG:hover .icon-2W8DHg {
+	color: var(--color-channel-icon);
+}
+.modeConnected-NrO4cP .icon-2W8DHg,
+.modeConnected-NrO4cP:hover .icon-2W8DHg,
+.modeSelected-3DmyhH .icon-2W8DHg,
+.modeSelected-3DmyhH:hover .icon-2W8DHg,
+.modeUnread-3Cxepe .icon-2W8DHg,
+.modeUnread-3Cxepe:hover .icon-2W8DHg,
+.notInteractive-2tFrlE.modeConnected-NrO4cP .icon-2W8DHg,
+.notInteractive-2tFrlE.modeSelected-3DmyhH .icon-2W8DHg {
+	color: var(--color-channel-icon);
+}
+.modeConnected-NrO4cP .subtitle-3PyFgf,	
+.modeConnected-NrO4cP:hover .subtitle-3PyFgf,
+.modeSelected-3DmyhH .subtitle-3PyFgf,
+.modeSelected-3DmyhH:hover .subtitle-3PyFgf,
+.modeUnread-3Cxepe .subtitle-3PyFgf,
+.modeUnread-3Cxepe:hover .subtitle-3PyFgf,
+.notInteractive-2tFrlE.modeConnected-NrO4cP .subtitle-3PyFgf,
+.notInteractive-2tFrlE.modeSelected-3DmyhH .subtitle-3PyFgf {
+	color: var(--color-channel-icon);
+}
+
+/* Unread Channel Colors */
+.wrapper-NhbLHG.modeUnread-3Cxepe
+  .content-1gYQeQ
+  .mainContent-20q_Hp
+  .channelName-3KPsGw {
+  color: var(--color-channel-unread);
+  font-weight: 900;
+}
+.unread-36eUEm {
+  background-color: var(--color-channel-unread);
+}
+.unreadPill-3nEWYM {
+  background-color: var(--color-channel-unread);
+}
+#app-mount .divider-2rZFJK.isUnread-3Lojb- {
+  border-top: 1px solid var(--color-channel-unread);
+}
+
+.unreadPillCapStroke-1nE1Q8 {
+  color: var(--color-channel-icon);
+  fill: var(--color-channel-icon);
+}
+
+/* Scrollbars */
+#autocomplete-popout .scroller::-webkit-scrollbar,
+#bda-qem-favourite-container .scroller-wrap .scroller::-webkit-scrollbar,
+#bda-qem-twitch-container .scroller-wrap .scroller::-webkit-scrollbar {
+  display: none;
+}
+
+#bd-settingspane-container .scroller-wrap .scroller::-webkit-scrollbar,
+.titleContainer-3fPic2 + .side-2ur1Qk::-webkit-scrollbar {
+  width: 5px;
+}
+
+#bd-settingspane-container .scroller-wrap .scroller::-webkit-scrollbar-thumb,
+#bd-settingspane-container .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+  border-radius: 40px;
+}
+
+#bda-qem-favourite-container .scroller-wrap .scroller::-webkit-scrollbar-thumb,
+#bda-qem-twitch-container .scroller-wrap .scroller::-webkit-scrollbar-thumb {
+  border: none !important;
+  background-color: rgba(225, 225, 225, 0.2) !important;
+  display: initial;
+}
+
+.friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, 
+.messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-track-piece,
+.scrollerWrap-2lJEkd .scroller-2CvAgC::-webkit-scrollbar-track-piece,
+.scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-track,
+.sb-menu-scroller:hover::-webkit-scrollbar-track-piece,
+.scrollerWrap-2su1QI::-webkit-scrollbar-track-piece,
+.scrollerWrap-2su1QI::-webkit-scrollbar-track,
+.scroller-2FKFPG::-webkit-scrollbar-track,
+.scroller-2FKFPG::-webkit-scrollbar-track-piece,
+.scroller-kQBbkU::-webkit-scrollbar-track,
+.scroller-kQBbkU::-webkit-scrollbar-track-piece,
+.contentRegionScroller-2_GT_N::-webkit-scrollbar-track,
+.contentRegionScroller-2_GT_N::-webkit-scrollbar-track-piece,
+.scroller-14hecM::-webkit-scrollbar-track,
+.scroller-29cQFV::-webkit-scrollbar-track,
+.peopleList-2VBrVI::-webkit-scrollbar-track,
+.stageSection-3mAD8V .container-24CyRY::-webkit-scrollbar-track {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
+.friends-table .scroller-wrap ::-webkit-scrollbar-thumb, 
+.messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-thumb,
+.scrollerThemed-2oenus.themeGhostHairlineChannels-3G0x9_ .scroller-2FKFPG::-webkit-scrollbar-thumb, 
+.scrollerThemed-2oenus.themeGhost-28MSn0 .scroller-2FKFPG::-webkit-scrollbar-thumb, 
+.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, 
+.scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, 
+.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb,
+.scroller::-webkit-scrollbar-thumb,
+.scrollerWrap-2lJEkd .scroller-2CvAgC::-webkit-scrollbar-thumb,
+.chat-2ZfjoI .textArea-2Spzkt::-webkit-scrollbar-thumb,
+.sb-menu-scroller::-webkit-scrollbar-thumb,
+.scroller-kQBbkU::-webkit-scrollbar-thumb,
+.contentRegionScroller-2_GT_N::-webkit-scrollbar-thumb,
+.titleContainer-3fPic2 + .side-2ur1Qk::-webkit-scrollbar-thumb,
+.scroller-14hecM::-webkit-scrollbar-thumb,
+.scroller-29cQFV::-webkit-scrollbar-thumb,
+.peopleList-2VBrVI::-webkit-scrollbar-thumb,
+.stageSection-3mAD8V .container-24CyRY::-webkit-scrollbar-thumb {
+  background-color: var(--color-main) !important;
+  border-color: transparent !important;
+  border-radius: 40px;
+}
+
+.scroller-2FKFPG::-webkit-scrollbar-track, 
+.scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+  border-radius: 0px;
+}
+
+.scroller-wrap .scroller::-webkit-scrollbar,
+.stageSection-3mAD8V .container-24CyRY::-webkit-scrollbar {
+  width: 11px;
+}
+
+.scroller-2FKFPG::-webkit-scrollbar {
+  width: 12px;
+}
+
+.scroller-wrap .scroller::-webkit-scrollbar-thumb, 
+.scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+  visibility: hidden !important;
+  transition: .2s visibility linear;
+}
+
+.scroller-wrap .scroller:hover::-webkit-scrollbar-thumb, 
+.scroller-wrap .scroller:hover::-webkit-scrollbar-track-piece {
+  visibility: visible !important;
+}
+
+.rolesList-22qj2L::-webkit-scrollbar {
+  height: 8px;
+  width: 12px;
+}
+
+/* Update Notice */
+html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg::before {
+	content: "Ashuramaru Theme is outdated, please download the latest one." !important;
+	display: var(--updatenotice, block) !important;
+	background-color: rgba(var(--backgroundColor), .8) !important;
+	box-shadow: 0 1px 5px 0 rgba(var(--transparencycolor), .3) !important;
+	color: var(--color-main) !important;
+	flex-grow: 0 !important;
+	flex-shrink: 0 !important;
+	font-size: 14px !important;
+	font-weight: 500 !important;
+	height: 36px !important;
+	line-height: 36px !important;
+	opacity: 1 !important;
+	padding-left: 4px !important;
+	padding-right: 28px !important;
+	position: relative !important;
+	text-align: center !important;
+	visibility: unset !important;
+	white-space: pre !important;
+	top: 0 !important;
+	left: 0 !important;
+	bottom: unset !important;
+	right: unset !important;
+	max-width: unset !important;
+	min-width: unset !important;
+	max-height: unset !important;
+	min-height: unset !important;
+	transform: unset !important;
+	animation: unset !important;
+	z-index: 101 !important;
+	pointer-events: auto !important;
+}
+
+
+
+
 
 /* ~~~~		1.		TRANSPARENCY					~~~~ */
 
