--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -19,6 +19,9 @@
 	--color-busy: ;
 	--color-stream: ;
 	--color-dnd: #ff0000;
+	--color-success: 50, 50, 50;
+	--color-warning: 250,166,26;
+	--color-danger: 237,66,69;
 	
 	/* Fonts */
 	--font-channels: ;
@@ -29,18 +32,18 @@
 	
 	/* Background Properties */
 	--backgroundColor: #0d0d0d;
-     --backgroundImage: url('https://kurou-kun.github.io/share/discord/ashuramaru/Ashuramaru-Background.png');
-     --backgroundPosition: center;
-     --backgroundSize: cover;
-     --backgroundRepeat: no-repeat;
-     --backgroundBlur: 100px;
-     --backgroundOpacity: .65;
-     --backgroundCode: rgba(0,0,0,.5);
-     --backgroundName: rgba(0,0,0,.5);
+	--backgroundImage: url('https://kurou-kun.github.io/share/discord/ashuramaru/Ashuramaru-Background.png');
+	--backgroundPosition: center;
+	--backgroundSize: cover;
+	--backgroundRepeat: no-repeat;
+	--backgroundBlur: 100px;
+	--backgroundOpacity: .65;
+	--backgroundCode: rgba(0,0,0,.5);
+	--backgroundName: rgba(0,0,0,.5);
 	
 	/* Home Icon Properties */
-     --homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord/home-icon.svg');
-     --homeImageSize: cover;
+	--homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord/home-icon.svg');
+	--homeImageSize: cover;
 	
 	/* Chat Properties */
 	--transparencycolor: 0,0,0;
@@ -50,6 +53,68 @@
 	--guildchanneltransparency: 0.15;
 	--chatinputtransparency: 0.0;
 	--memberlisttransparency: 0.0;
+	--textshadow: transparent;
+	--textbrightest: 255,255,255;
+	--textbrighter: 222,222,222;
+	--textbright: 200,200,200;
+	--textdark: 160,160,160;
+	--textdarker: 125,125,125;
+	--textdarkest: 90,90,90;
+	
+	/* Update Notice */
+	--version: none;		
+}
+
+.theme-light, .theme-dark, .theme-amoled {
+	--text-positive: rgb(var(--successcolor));
+	--text-warning: rgb(var(--warningcolor));
+	--text-danger: rgb(var(--dangercolor));
+	--info-positive-background: rgba(var(--successcolor),.1);
+	--info-positive-foreground: rgb(var(--successcolor));
+	--info-positive-text: #fff;
+	--info-warning-background: rgba(var(--warningcolor),.1);
+	--info-warning-foreground: rgb(var(--warningcolor));
+	--info-warning-text: #fff;
+	--info-danger-background: rgba(var(--dangercolor),.1);
+	--info-danger-foreground: rgb(var(--dangercolor));
+	--info-danger-text: #fff;
+	--status-positive: rgb(var(--successcolor));
+	--status-positive-background: rgb(var(--successcolor));
+	--status-positive-text: #fff;
+	--status-warning: rgb(var(--warningcolor));
+	--status-warning-background: rgb(var(--warningcolor));
+	--status-warning-text: #fff;
+	--status-danger: rgb(var(--dangercolor));
+	--status-danger-background: rgb(var(--dangercolor));
+	--status-danger-text: #fff;
+	--header-primary: rgb(var(--textbrightest));
+	--header-secondary: rgb(var(--textbright));
+	--text-normal: rgb(var(--textbrighter));
+	--text-muted: rgb(var(--textdarker));
+	--channels-default: rgb(var(--textdark));
+	--interactive-normal: rgb(var(--textbright));
+	--interactive-hover: rgb(var(--textbrighter));
+	--interactive-active: rgb(var(--textbrightest));
+	--interactive-muted: rgb(var(--textdarkest));
+	--logo-primary: rgb(var(--textbrightest));
+	--modal-background: rgba(var(--transparencycolor), .2);
+	--background-accent: rgba(var(--transparencycolor), .1);
+	--background-primary: rgba(var(--transparencycolor), .2);
+	--background-secondary: rgba(var(--transparencycolor), .3);
+	--background-secondary-alt: rgba(var(--transparencycolor), .35);
+	--background-tertiary: rgba(var(--transparencycolor), .4);
+	--background-floating: rgba(var(--transparencycolor), .5);
+	--background-mobile-primary: rgba(var(--transparencycolor), .2);
+	--background-mobile-secondary: rgba(var(--transparencycolor), .3);
+	--background-modifier-accent: rgba(var(--textbrightest),.1);
+	--background-message-automod: rgba(var(--dangercolor),.05);
+	--background-message-automod-hover: rgba(var(--dangercolor),.1);
+	--channeltextarea-background: rgba(var(--transparencycolor), .3);
+	--input-background: rgba(var(--transparencycolor), .1);
+	--elevation-low: 0 1px 5px 0 rgba(var(--transparencycolor), .3);
+	--elevation-high: 0 2px 10px 0 rgba(var(--transparencycolor), .3);
+	--font-primary: var(--font) !important;
+	--font-display: var(--font) !important;
 }
 
 .appMount-2yBXZl,
