--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -66,26 +66,26 @@
 }
 
 .theme-light, .theme-dark, .theme-amoled {
-	--text-positive: rgb(var(--successcolor));
-	--text-warning: rgb(var(--warningcolor));
-	--text-danger: rgb(var(--dangercolor));
-	--info-positive-background: rgba(var(--successcolor),.1);
-	--info-positive-foreground: rgb(var(--successcolor));
+	--text-positive: rgb(var(--color-success));
+	--text-warning: rgb(var(--color-warning));
+	--text-danger: rgb(var(--color-danger));
+	--info-positive-background: rgba(var(--color-success),.1);
+	--info-positive-foreground: rgb(var(--color-success));
 	--info-positive-text: #fff;
-	--info-warning-background: rgba(var(--warningcolor),.1);
-	--info-warning-foreground: rgb(var(--warningcolor));
+	--info-warning-background: rgba(var(--color-warning),.1);
+	--info-warning-foreground: rgb(var(--color-warning));
 	--info-warning-text: #fff;
-	--info-danger-background: rgba(var(--dangercolor),.1);
-	--info-danger-foreground: rgb(var(--dangercolor));
+	--info-danger-background: rgba(var(--color-danger),.1);
+	--info-danger-foreground: rgb(var(--color-danger));
 	--info-danger-text: #fff;
-	--status-positive: rgb(var(--successcolor));
-	--status-positive-background: rgb(var(--successcolor));
+	--status-positive: rgb(var(--color-success));
+	--status-positive-background: rgb(var(--color-success));
 	--status-positive-text: #fff;
-	--status-warning: rgb(var(--warningcolor));
-	--status-warning-background: rgb(var(--warningcolor));
+	--status-warning: rgb(var(--color-warning));
+	--status-warning-background: rgb(var(--color-warning));
 	--status-warning-text: #fff;
-	--status-danger: rgb(var(--dangercolor));
-	--status-danger-background: rgb(var(--dangercolor));
+	--status-danger: rgb(var(--color-danger));
+	--status-danger-background: rgb(var(--color-danger));
 	--status-danger-text: #fff;
 	--header-primary: rgb(var(--textbrightest));
 	--header-secondary: rgb(var(--textbright));
@@ -107,14 +107,12 @@
 	--background-mobile-primary: rgba(var(--transparencycolor), .2);
 	--background-mobile-secondary: rgba(var(--transparencycolor), .3);
 	--background-modifier-accent: rgba(var(--textbrightest),.1);
-	--background-message-automod: rgba(var(--dangercolor),.05);
-	--background-message-automod-hover: rgba(var(--dangercolor),.1);
+	--background-message-automod: rgba(var(--color-danger),.05);
+	--background-message-automod-hover: rgba(var(--color-danger),.1);
 	--channeltextarea-background: rgba(var(--transparencycolor), .3);
 	--input-background: rgba(var(--transparencycolor), .1);
 	--elevation-low: 0 1px 5px 0 rgba(var(--transparencycolor), .3);
 	--elevation-high: 0 2px 10px 0 rgba(var(--transparencycolor), .3);
-	--font-primary: var(--font) !important;
-	--font-display: var(--font) !important;
 }
 
 .appMount-2yBXZl,
