--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -60,6 +60,13 @@
 	--textdark: 160,160,160;
 	--textdarker: 125,125,125;
 	--textdarkest: 90,90,90;
+	--popoutposition: var(--backgroundPosition);
+	--popoutsize: var(--backgroundSize);
+	--popoutblur: var(--backgroundBlur);
+	--backdrop: rgba(0,0,0,0.85);
+	--backdropposition: center;
+	--backdropsize:	cover;
+	--backdropblur:	unset;
 	
 	/* Update Notice */
 	--version: none;		
