--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -14,6 +14,7 @@
 	--color-channel-icon: #ff0000;
 	--color-channel-unread: #ff0000;
 	--color-link: #ff0000;
+	--color-mention: #ff0000;
 	--color-online: ;
 	--color-offline: ;
 	--color-busy: ;
