--- a/share/ashuramaru/discord/source.css
+++ b/share/ashuramaru/discord/source.css
@@ -67,7 +67,7 @@
 	
 	/* Theme */
 	--theme-version: "1.0.9";
-	--version: none;		
+	--updatenotice: none;		
 }
 
 .theme-light, .theme-dark, .theme-amoled {
