--- a/share/ashuramaru/discord/edit.css
+++ b/share/ashuramaru/discord/edit.css
@@ -29,7 +29,7 @@ Table of Contents
 
 /* b. Custome text */
 .titleBar-1it3bQ:not(.typeMacOS-3V4xXE)::before {
-  content: "Ａｓｈｕｒａｍａｒｕ Ｔｈｅｍｅ" " v."var(--theme-version);
+  content: "𝓐𝓼𝓱𝓾𝓻𝓪𝓶𝓪𝓻𝓾 𝓣𝓱𝓮𝓶𝓮" " v."var(--theme-version);
   position: absolute;
   top: 5px;
   left: 10px;
